chg:usr: Added review comments in refs.bib for S17-IR-2006

--- a/docs/source/refs.bib
+++ b/docs/source/refs.bib
@@ -3878,7 +3878,7 @@
 
 % S17-IR-2006
 @Book{book-Cinder,
-  review = {},
+  review    = {Reviewed: The entry is correct},
   author    = {Dan Radez},
   title     = {OpenStack Essentials},
   year      = {2015},
@@ -3890,8 +3890,9 @@
   ean       = {9781783987085},
   owner     = {S17-IR-2006}
 }
+
 @Misc{wiki-Cinder,
-  review = {},
+  review       = {Reviewed: The entry is correct but author can be added as Wikipedia},
   title        = {Cinder - Openstack},
   howpublished = {Web Page},
   note         = {Accessed: 2017-1-21},
@@ -3900,7 +3901,7 @@
 }
 
 @Article{www-spark,
-  review = {},
+  review  = {Reviewed: The entry is correct},
   author  = {Abdul Ghaffar Shoro and Tariq Rahim Soomro},
   title   = {Big data analysis: Apache spark perspective},
   journal = {Global Journal of Computer Science and Technology},
@@ -3914,7 +3915,7 @@
 }
 
 @Misc{www-dotCloud,
-  review = {},
+  review       = {Reviewed: The entry is correct},
   author       = {Jordan Novet},
   title        = {dotCloud},
   howpublished = {Web Page},
@@ -3926,15 +3927,16 @@
 }
 
 @Misc{www-R,
-  review = {},
+  review       = {Reviewed: The entry is correct but author can be added},
   title        = {R: What is R?},
   howpublished = {Web Page},
   note         = {Accessed: 2017-1-26},
   url          = {https://www.r-project.org/about.html},
   owner        = {S17-IR-2006}
 }
+
 @Book{book-R,
-  review = {},
+  review    = {Reviewed: The entry is correct},
   author    = {Vignesh Prajapati},
   title     = {Big data analytics with R and Hadoop},
   year      = {2013},
@@ -3944,7 +3946,7 @@
 }
 
 @Misc{www-gemfire,
-  review = {},
+  review       = {Reviewed: The entry is correct but author can be added},
   title        = {About Pivotal Gemfire},
   howpublished = {Web Page},
   version      = {9.0.1},
